<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="org.prebid.mobile.javademo.activities.MainActivity">

        <TextView
            android:id="@+id/tvAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Java"
            android:textColor="#ff4081"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/tvAdServer"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/adServerText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerAdServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:minWidth="128dp"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/tvAdType"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/adTypeText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerAdType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:minWidth="128dp"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/groupAutoRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/tvAutoRefresh"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/autoRefreshText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAutoRefresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="128dp"
                android:minHeight="48dp"
                android:text="30" />
        </LinearLayout>

        <Button
            android:id="@+id/btnShowAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buttonText" />

    </LinearLayout>

</layout>