...
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/adSizeText"/>

        <Spinner
            android:id="@+id/adSizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:minHeight="48dp"
            android:minWidth="128dp" />
...
